examples/bad/unsafe_index_without_block.mko
fn main() {
    let xs = [1, 2, 3]
    let _ = unsafe_index(xs, 0)
}
